milestone4/tests/test_7.java
public class test_7 {
    public static void main() {
        int[][] arr1[] = new int[3][2];
    }
}
//error